Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13229

Mozilla Thunderbird 38.7.1 crash when creating or deleting an account (due to missing shell32 export?)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.6
    • None

    Description

      reactos 0.4.5RC2
      Mozilla Thunderbird 38.7.1
      When trying to create a new or delete an existing EMail account, we get a crash via the programs error reporter.

      Ros Log shows a missing export, which could be the culprit:

      (dll/win32/kernel32/client/except.c:721) Missing function in   : shell32.dll
      (dll/win32/kernel32/client/except.c:722) with the functionname : SHEnumerateUnreadMailAccountsW

      r045RC2-thunderbirdCrash.png
      In case someone adds a stub, please add the patch here first, so I can recheck whether it helps.

      By the way: older Thunderbird 3.1.20 performs create and delete account fine

      Attachments

        1. r045RC2-thunderbirdCrash.png
          r045RC2-thunderbirdCrash.png
          246 kB
        2. shell32.patch
          1 kB
        3. xpsp3.gif
          xpsp3.gif
          50 kB

        Activity

          People

            learn_more Mark Jansen
            reactosfanboy reactosfanboy
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: